Vue响应式原理：初始化数据

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <script src="./dist/umd/vue.js"></script>
     <script>
         let vm = new Vue({
-            el: '#app'
+            el: '#app',
+            data: {
+                name: 'zhangsan'
+            }
         })
     </script>
 </body>
