Vue响应式原理：递归属性劫持（对象）
对对象的属性进行劫持

- 1.定义Observer类，观测数据
- 2.defineReactive定义响应式数据
- 3.如果对象属性值还是对象则递归深度监测
- 4.当对data进行赋值操作，且值是对象时，也需要观测数据

--- a/index.html
+++ b/index.html
@@ -1,19 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script src="./dist/umd/vue.js"></script>
     <script>
         let vm = new Vue({
             el: '#app',
-            data: {
-                name: 'zhangsan'
-            }
+            data() {
+                return {
+                    name: 'zhangsan',
+                    age: 18,
+                    address: {
+                        number: 0,
+                        name: 'xxx'
+                    }
+                }
+            },
+            computed() {},
+            watch() {}
         })
+        vm._data.name = 'lisi' // 修改数据
+        console.log(vm._data)
+
+        vm._data.address = {
+            a: 1
+        } // 修改数据，且值是对象
+        console.log(vm._data)
     </script>
 </body>
+
 </html>
