--- a/index.html
+++ b/index.html
@@ -14,24 +14,14 @@
             el: '#app',
             data() {
                 return {
-                    name: 'zhangsan',
-                    age: 18,
-                    address: {
-                        number: 0,
-                        name: 'xxx'
-                    }
+                    name: [{a:1},{b:2}]
                 }
             },
             computed() {},
             watch() {}
         })
-        vm._data.name = 'lisi' // 修改数据
-        console.log(vm._data)
-
-        vm._data.address = {
-            a: 1
-        } // 修改数据，且值是对象
-        console.log(vm._data)
+        vm._data.name.push({c: 3})
+        console.log(vm._data.name)
     </script>
 </body>
 
