--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 </head>
 
 <body>
-    <div id="app"> hello
-        <p>{{name}}</p>
-        <span>{{age}}</span>
-    </div>
+    <div id="app" style="color: red;background:blue"><p>hello {{name}}</p> hello</div>
     <script src="./dist/umd/vue.js"></script>
     <script>
         let vm = new Vue({
