Vue响应式原理：数据代理

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             computed() {},
             watch() {}
         })
+        // vm.name => vm._data.name
+        console.log(vm.name)
     </script>
 </body>
 
