--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
-    <div id="app" style="color: red;background:blue"><p>hello {{name}}</p> hello</div>
+    <div id="app" style="color: red;background:blue">
+        <p>{{name}}</p>
+        <p>{{age}}</p>
+        <ul>
+            <li>{{name}}</li>
+            <li>age</li>
+        </ul>
+    </div>
+    <div>other dom</div>
     <script src="./dist/umd/vue.js"></script>
     <script>
         let vm = new Vue({
