生命周期的合并
- Mixin原理
- 合并生命周期
- 调用生命周期
- 初始化流程中调用生命周期

--- a/index.html
+++ b/index.html
@@ -24,8 +24,21 @@
             data() {
                 return {
                     name: 'zhangsan',
-                    age: 11
+                    // age: {age: 100},
+                    age: 100
                 }
+            },
+            beforeCreate() {
+                console.log('beforeCreate',  this.age)
+            },
+            created(){
+                console.log('created', this.age, this.$el)
+            },
+            beforeMount() {
+                console.log(this.$el, '渲染前')
+            },
+            mounted() {
+                console.log(this.$el, '渲染后')
             },
             computed() {},
             watch() {}
