--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
 
 <body>
     <div id="app" style="color: red;background:blue">
-        <p>{{name}}</p>
         <p>{{age}}</p>
-        <ul>
-            <li>{{name}}</li>
-            <li>age</li>
-        </ul>
     </div>
     <div>other dom</div>
     <script src="./dist/umd/vue.js"></script>
@@ -24,27 +19,16 @@
             data() {
                 return {
                     name: 'zhangsan',
-                    // age: {age: 100},
-                    age: 100
+                    age: {age: 100},
                 }
             },
-            beforeCreate() {
-                console.log('beforeCreate',  this.age)
-            },
-            created(){
-                console.log('created', this.age, this.$el)
-            },
-            beforeMount() {
-                console.log(this.$el, '渲染前')
-            },
-            mounted() {
-                console.log(this.$el, '渲染后')
-            },
-            computed() {},
-            watch() {}
         })
-        // vm.name => vm._data.name
-        console.log(vm.name)
+
+        setTimeout(() => {
+            vm.age = 1000 // 依赖收集
+            // vm._update(vm._render())
+            // 希望数据变化可以自动的重新执行我们的渲染watcher
+        }, 1000);
     </script>
 </body>
 
