--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- watcher 和 dep 的关系：一个watcher对应n个dep，一个dep对应n个watcher => 多对多 -->
     <div id="app" style="color: red;background:blue">
         <p>{{age}}</p>
     </div>
@@ -19,7 +20,7 @@
             data() {
                 return {
                     name: 'zhangsan',
-                    age: {age: 100},
+                    age: {age: 100}, // 这里会造成两次取值效果
                 }
             },
         })
